--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "start": "node server/server.js"
   },
   "engines": {
-    "node": "8.1.3"  
+    "node": "8.1.3"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.1"
   },
